# Havoc

./: .gitignore  .gitmodules
assets/.diagrams/: HavocArchitecture.drawio
client/: CMakeLists.txt  makefile
client/data/: Default.css  Havoc.qrc
client/data/design/: HavocListener.ui  HavocMainWindow.ui  HxConsole.ui  PageBuilder.ui  PagePlugins.ui  PayloadKaineBuilder.ui
client/data/designs/: HavocConnect.ui  HavocMainWindow.ui  PageListener.ui
client/include/: Common.h  Events.h  Havoc.h
client/include/api/: Engine.h  HcCore.h  HcScriptManager.h
client/include/core/: EventWorker.h  Events.h  Helper.h
client/include/ui/: AgentConsole.h  Connect.h  DialogListener.h  HcComboBox.h  HcConnectDialog.h  HcConsole.h  HcLineEdit.h  HcListenerDialog.h  HcMainWindow.h  HcPageAgent.h  HcPageBuilder.h  HcPageListener.h  HcPageScript.h  HcWidget.h  HxConsole.h  HxWidget.h  MainWindow.h  PageAgent.h  PageBuilder.h  PageListener.h  PageScript.h
client/python/pyhavoc/: __init__.py  core.py  havocore.py  havocui.py  scriptmngr.py  ui.py
client/src/: Events.cc  Havoc.cc  Main.cc
client/src/api/: Engine.cc  HcCore.cc  HcScriptManager.cc
client/src/core/: EventWorker.cc  Events.cc  Helper.cc
client/src/ui/: AgentConsole.cc  Connect.cc  DialogListener.cc  HavocConnect.cc  HcComboBox.cc  HcConnectDialog.cc  HcConsole.cc  HcLineEdit.cc  HcListenerDialog.cc  HcMainWindow.cc  HcPageAgent.cc  HcPageBuilder.cc  HcPageListener.cc  HcPageScript.cc  HxConsole.cc  HxWidget.cc  MainWindow.cc  PageAgent.cc  PageBuilder.cc  PageListener.cc  PageScript.cc
client/tests/python/: kaine_payload.py  listener_http.py
data/: havoc.toml
teamserver/: go.mod  go.sum
teamserver/cmd/: cmd.go  server.go
teamserver/cmd/server/: agent.go  api.go  events.go  listener.go  logger.go  plugin.go  teamserver.go  types.go  users.go
teamserver/pkg/agent/: agent.go  demons.go
teamserver/pkg/api/: agent.go  api.go  event.go  listener.go
teamserver/pkg/cert/: cert.go
teamserver/pkg/colors/: colors.go
teamserver/pkg/common/builder/: builder.go
teamserver/pkg/events/: chatlog.go  demons.go  events.go  gate.go  listeners.go  service.go  teamserver.go
teamserver/pkg/handlers/: handlers.go
teamserver/pkg/logger/: global.go  logger.go
teamserver/pkg/logr/: logr.go
teamserver/pkg/plugin/: agent.go  listener.go  plugin.go  profile.go
teamserver/pkg/profile/: config.go  profile.go
teamserver/pkg/service/: agent.go  service.go
teamserver/pkg/utils/: utils.go
